I in fact did not fix the uneven padding

--- a/home/styles-home.css
+++ b/home/styles-home.css
@@ -300,7 +300,7 @@
     }
 
     .playing-subsection-header {
-        margin-bottom: 0.5rem;
+        margin-bottom: 0;
     }
 
     .game-card-outer {
@@ -309,7 +309,7 @@
     }
 
     .game-card-inner {
-        padding-bottom: 2rem;
+        padding: 2rem 1.5rem
     }
 
     .game-card-inner:hover {
